# shopee-ai-solutions-engineer-case-study

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  qdrant.sh  streamlit_app.py
.github/workflows/: deploy.yml
.streamlit/: config.toml
cloudformation/: stack.yaml
docs/: knowledge_test.md
notebooks/: task_1.ipynb
pages/: chat.py  custom_vectordb.py  database.py  qdrant_vectordb.py
src/: utils.py
src/database/: local_database.py
src/embeddings/: embedder_base.py  openai_embedder.py
src/models/: document.py  receipt.py
src/retriever/: vector_search.py
src/vectorstore/: custom_vectordb.py  qdrant_client.py  vectorstore_base.py
tests/: README.md  conftest.py  test_custom_vectordb.py  test_openai_embedder.py  test_qdrant.py
