[project]
name = "shopee-ai-solutions-engineer-case-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fireducks>=1.4.3",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "qdrant-client>=1.15.1",
    "seaborn>=0.13.2",
]
