[project]
name = "shopee-ai-solutions-engineer-case-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fireducks>=1.4.3",
    "ipykernel>=7.1.0",
    "langchain-openai>=1.0.2",
    "matplotlib>=3.10.7",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
]

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["*"]
