[project]
name = "shopee-ai-solutions-engineer-case-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain-openai>=1.0.2",
    "matplotlib>=3.10.7",
    "openai-agents>=0.5.0",
    "pymupdf>=1.26.6",
    "pypdf>=6.2.0",
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.15.1",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
]

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["*"]
